[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["bikmetle <bikmetle@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.35.0"
aioconsole = "^0.7.0"
setuptools = "^72.1.0"
blinker = "1.7.0"
chardet = "^5.2.0"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
