[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["bikmetle <bikmetle@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.35.0"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
